# glosm_ships

./: .gitignore  CMakeLists.txt  README  ToDo.txt  conanfile.txt
libglosm-client/: CMakeLists.txt  GPXTile.cc  GeometryTile.cc  TerrainTile.cc  TileManager.cc  model3DS.cpp
libglosm-client/3dsModel/: ModelReader.h  Vector2.h  glut.h  model3DS.h
libglosm-client/data/: GLORIEUX.3DS  krzak.3ds  krzak_1.3ds  latarnia.3ds  lawka.3ds  most.3ds  test_3ds.3ds
libglosm-client/glosm/: GPXLayer.hh  GPXTile.hh
libglosm-server/: PreloadedGPXDatasource.cc  PreloadedXmlDatasource.cc
testdata/: glosm.gpx  glosm.osm  map_sea.osm  positions.json  tracks.gpx  tracks2.gpx
testdata/program/: output12.osm  output13.osm  output15.osm  output16.osm  output19.osm  output2.osm  output20.osm  output21.osm  output23.osm  output27.osm  output31.osm  output5.osm  output6.osm  output7.osm  output9.osm
tiler/: Main.cc
viewer/: CMakeLists.txt  GLUTMain.cc  GlosmViewer.cc  GlosmViewer.hh  aisstream.py
